Change text file to Binary and improved password encryptation